# social-network-agent-simulation

./: .gitignore  CLAUDE.md  README.md  demo.py  pyproject.toml
research/: architecture-design.md  similar-projects.md
src/: main.py
src/agents/: behavior.py  factory.py  history.py  llm_brain.py  memory.py  models.py  prompts.py
src/core/: config.py  database.py  engine.py  export.py  llm_client.py  models.py  scenarios.py  time_manager.py  world_runner.py
src/network/: dynamics.py  graph.py  models.py  propagation.py
src/news/: ingestion.py  models.py  scheduler.py
src/timeline/: fork.py  manager.py  models.py  reality_diff.py
src/visualization/: api.py  cli.py  server.py
src/visualization/static/: index.html
tests/: test_agents.py  test_engine.py  test_models.py  test_timeline.py
