[project]
name = "parallel-world-simulator"
version = "0.1.0"
description = "A parallel world social network simulator that ingests real-time news and runs accelerated timelines to predict future opinion dynamics"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "networkx>=3.2",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "websockets>=13.0",
    "httpx>=0.27.0",
    "feedparser>=6.0",
    "apscheduler>=3.10",
    "pydantic>=2.9",
    "rich>=13.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
]
viz = [
    "plotly>=5.24",
]

[tool.ruff]
line-length = 100
target-version = "py311"
